--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 
     <!-- Custom libs-->
     <script src="scripts/app.js"></script>
+    <!-- Controllers-->
     <script src="scripts/controllers/welcomeController.js"></script>
     <script src="scripts/controllers/user/loginController.js"></script>
     <script src="scripts/controllers/user/registerController.js"></script>
+    <script src="scripts/controllers/feedsController.js"></script>
+    <!-- Services-->
     <script src="scripts/services/authorizationService.js"></script>
-
+<div></div>
 </body>
 </html>
