--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!--External libs-->
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-route.min.js"></script>
+    <script src="lib/angular/angular-resource.js"></script>
     <!-- Custom libs-->
     <script src="scripts/app.js"></script>
     <!-- Controllers-->
