User wall in implementing process

--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
     <script src="scripts/services/mainRequesterService.js"></script>
     <script src="scripts/services/authorizationService.js"></script>
     <script src="scripts/services/userService.js"></script>
+    <script src="scripts/services/postService.js"></script>
 </body>
 </html>
