Comment add and comments display functionality added

--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
     <script src="scripts/services/authorizationService.js"></script>
     <script src="scripts/services/userService.js"></script>
     <script src="scripts/services/postService.js"></script>
+    <script src="scripts/services/commentService.js"></script>
 </body>
 </html>
