--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-route.min.js"></script>
     <script src="lib/angular/angular-resource.js"></script>
+    <script src="lib/jquery-2.1.3.min.js"></script>
     <!-- Custom libs-->
     <script src="scripts/app.js"></script>
     <!-- Directives-->
