Friend request Send, Accept and Decline functionality implemented

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="scripts/directives/bindFile.js"></script>
     <!-- Controllers-->
     <script src="scripts/controllers/welcomeController.js"></script>
+    <script src="scripts/controllers/user/userAuthenticationController.js"></script>
     <script src="scripts/controllers/user/userController.js"></script>
     <script src="scripts/controllers/feedsController.js"></script>
     <!-- Services-->
