Implemented preview user on user hover

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div ng-view=""></div>
     <footer class="text-center">
         <small><strong>Author:</strong>
-            <a href="https://github.com/Domin1k" target="_blank" class="ng-binding">Domin1k</a>, <strong>Copyright:</strong>
+            <a href="https://github.com/Domin1k" target="_blank" class="ng-binding">Domin1k</a>
         <br>
         <small><strong><a href="https://github.com/Domin1k/JS-SPA-Social-Network" target="_blank">Open Source Project</a> powered by:</strong> <a href="http://angularjs.org/" target="_blank">AngularJS</a> and <a href="http://getbootstrap.com/" target="_blank">Twitter Bootstrap</a></small>
         </small>
