--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="scripts/app.js"></script>
     <!-- Directives-->
     <script src="scripts/directives/bindFile.js"></script>
+    <script src="scripts/directives/fallBackImage.js"></script>
     <!-- Controllers-->
     <script src="scripts/controllers/welcomeController.js"></script>
     <script src="scripts/controllers/user/userAuthenticationController.js"></script>
