Notify added and bug fixed

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="lib/angular/angular-route.min.js"></script>
     <script src="lib/angular/angular-resource.js"></script>
     <script src="lib/jquery-2.1.3.min.js"></script>
+    <script src="lib/jquery.noty/jquery.noty.js"></script>
 
     <!-- Custom libs-->
     <script src="scripts/app.js"></script>
@@ -29,7 +30,6 @@
     <script src="scripts/directives/bindFile.js"></script>
     <script src="scripts/directives/fallBackImage.js"></script>
     <!-- Controllers-->
-    <script src="scripts/controllers/welcomeController.js"></script>
     <script src="scripts/controllers/user/userAuthenticationController.js"></script>
     <script src="scripts/controllers/user/userController.js"></script>
     <script src="scripts/controllers/feedsController.js"></script>
@@ -40,5 +40,6 @@
     <script src="scripts/services/userService.js"></script>
     <script src="scripts/services/postService.js"></script>
     <script src="scripts/services/commentService.js"></script>
+    <script src="scripts/services/notifyService.js"></script>
 </body>
 </html>
