--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="scripts/controllers/user/userController.js"></script>
     <script src="scripts/controllers/feedsController.js"></script>
     <script src="scripts/controllers/postController.js"></script>
+    <script src="scripts/controllers/commentController.js"></script>
     <!-- Services-->
     <script src="scripts/services/mainRequesterService.js"></script>
     <script src="scripts/services/authorizationService.js"></script>
