--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <title ng-bind="$root.title">MyApp - Welcome</title>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
+    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/app.css"/>
+    <link rel="stylesheet" href="css/font-awesome.min.css"/>
 </head>
 <body>
-<!--ADD GOOGLE FONTS IF THERE IS TIME LEFT :P-->
     <div ng-view=""></div>
     <footer class="text-center">
         <small><strong>Author:</strong>
