--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-route.min.js"></script>
     <script src="lib/angular/angular-resource.js"></script>
-    <script src="lib/jquery-2.1.3.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="lib/jquery.noty/jquery.noty.js"></script>
 
     <!-- Custom libs-->
